Adding order controller and service tests